# financial-instrument-qualifier

./: README.md  figi.py  main.py  pyproject.toml  testing_figi.py
figi/: figi.py
figi_api/: figi.py  testing_figi.py
yfinance_api/: yfinance_client.py
